...
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        SizedBox(
                          width: double.infinity,
                          child: TextFormField(
                            key: const ValueKey('Login-Email_f4p0'),
                            controller: _model.loginEmailTextController,
                            focusNode: _model.loginEmailFocusNode,
                            autofocus: false,
                            obscureText: false,
                            decoration: InputDecoration(
                              isDense: true,
...
                                .asValidator(context),
                          ),
                        ),
                        SizedBox(
                          width: double.infinity,
                          child: TextFormField(
                            key: const ValueKey('Login-Password_d88s'),
                            controller: _model.loginPasswordTextController,
                            focusNode: _model.loginPasswordFocusNode,
                            autofocus: false,
                            obscureText: !_model.loginPasswordVisibility,
                            decoration: InputDecoration(
                              isDense: true,
...
                            validator: _model
                                .loginPasswordTextControllerValidator
                                .asValidator(context),
                          ),
                        ),
                        FFButtonWidget(
                          key: const ValueKey('Login-Button_kzl5'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'SIGN_IN_PAGE_Login-Button_ON_TAP');
                            logFirebaseEvent('Login-Button_auth');
                            GoRouter.of(context).prepareAuthEvent();

...
                        'SIGN_IN_PAGE_Login-ForgotPassword_ON_TAP');
                    logFirebaseEvent('Login-ForgotPassword_navigate_to');

                    context.pushNamed('ForgotPassword');
                  },
                  child: Text(
                    key: const ValueKey('Login-ForgotPassword_20du'),
                    'Forgot password?',
                    style: FlutterFlowTheme.of(context).titleMedium.override(
                          fontFamily: 'Inter',
                          color: FlutterFlowTheme.of(context).primaryText,
                          letterSpacing: 0.0,
                          decoration: TextDecoration.underline,
...
                        'SIGN_IN_DontHaveAccount-Navigation_ON_TA');
                    logFirebaseEvent('DontHaveAccount-Navigation_navigate_to');

                    context.pushNamed('SignUp');
                  },
                  child: Text(
                    key: const ValueKey('DontHaveAccount-Navigation_h045'),
                    'Don\'t have an account? Register',
                    style: FlutterFlowTheme.of(context).titleMedium.override(
                          fontFamily: 'Inter',
                          color: FlutterFlowTheme.of(context).primaryText,
                          letterSpacing: 0.0,
                          decoration: TextDecoration.underline,
...
