...
                                    .override(
                                      fontFamily: 'Inter',
                                      letterSpacing: 0.0,
                                    ),
                              ),
                              FFButtonWidget(
                                key: const ValueKey('Button_d5j6'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'CHAT_WINDOW_PAGE_END_CHAT_BTN_ON_TAP');
                                  logFirebaseEvent('Button_alert_dialog');
                                  var confirmDialogResponse =
                                      await showDialog<bool>(
                                            context: context,
                                            builder: (alertDialogContext) {
                                              return AlertDialog(
                                                title: const Text('End Chat'),
                                                content: const Text(
                                                    'This will delete the chat.  Please confirm this is what you want to do.'),
                                                actions: [
                                                  TextButton(
                                                    onPressed: () =>
                                                        Navigator.pop(
                                                            alertDialogContext,
                                                            false),
...
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  Expanded(
                    child: SizedBox(
                      width: 300.0,
                      child: TextFormField(
                        key: const ValueKey('SendMessage_tw5m'),
                        controller: _model.sendMessageTextController,
                        focusNode: _model.sendMessageFocusNode,
                        autofocus: false,
                        obscureText: false,
                        decoration: InputDecoration(
                          isDense: false,
...
                            .asValidator(context),
                      ),
                    ),
                  ),
                  if (_model.sendMessageTextController.text != '')
                    FlutterFlowIconButton(
                      key: const ValueKey('IconButton_xg10'),
                      borderColor: FlutterFlowTheme.of(context).secondary,
                      borderRadius: 50.0,
                      buttonSize: 40.0,
                      fillColor: FlutterFlowTheme.of(context).primary,
                      icon: Icon(
                        Icons.arrow_upward,
...
