...
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        SizedBox(
                          width: double.infinity,
                          child: TextFormField(
                            key: const ValueKey('SignUp-Email_cdgl'),
                            controller: _model.signUpEmailTextController,
                            focusNode: _model.signUpEmailFocusNode,
                            autofocus: false,
                            obscureText: false,
                            decoration: InputDecoration(
                              isDense: true,
...
                                .asValidator(context),
                          ),
                        ),
                        SizedBox(
                          width: double.infinity,
                          child: TextFormField(
                            key: const ValueKey('SignUp-Password_1r3r'),
                            controller: _model.signUpPasswordTextController,
                            focusNode: _model.signUpPasswordFocusNode,
                            autofocus: false,
                            obscureText: !_model.signUpPasswordVisibility,
                            decoration: InputDecoration(
                              isDense: true,
...
                                .asValidator(context),
                          ),
                        ),
                        SizedBox(
                          width: double.infinity,
                          child: TextFormField(
                            key: const ValueKey('SignUp-ConfirmPassword_hrbf'),
                            controller:
                                _model.signUpConfirmPasswordTextController,
                            focusNode: _model.signUpConfirmPasswordFocusNode,
                            autofocus: false,
                            obscureText:
                                !_model.signUpConfirmPasswordVisibility,
...
                            validator: _model
                                .signUpConfirmPasswordTextControllerValidator
                                .asValidator(context),
                          ),
                        ),
                        FFButtonWidget(
                          key: const ValueKey('SignUp-Button_fvzd'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'SIGN_UP_PAGE_SignUp-Button_ON_TAP');
                            logFirebaseEvent('SignUp-Button_validate_form');
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
...
